<?xml version="1.0"?>
<package format="3">
  <name>ros2_launch_demo</name>
  <version>0.0.0</version>
  <description>ROS2 Launch Files Assignment</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Launch system dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Testing (optional but commonly included) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
